--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -23,30 +23,38 @@
 	{% endif %}
 	<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
 	        {% if show_teacher_forms %}
-            <div class="btn-group" role="group" aria-label="Download">
+            <div class="btn-group btn-group-sm" role="group" aria-label="Download">
               <button type="button" class="btn btn-default btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                Prenesi datoteke <span class="caret"></span>
+                {# Translators: Prenesi datoteke #}
+                {% trans "Download all files" %}
+                <span class="caret"></span>
               </button>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="{% url 'problem_set_attempts' problem_set.pk %}">Datoteke za reševanje</a></li>
-                <li><a href="{% url 'problem_set_edit' problem_set.pk %}">Datoteke za urejanje</a></li>
+                <li><a href="{% url 'problem_set_attempts' problem_set.pk %}">
+                	{# Translators: Datoteke za reševanje #}
+					{% trans "Files for solving" %}
+                </a></li>
+                <li><a href="{% url 'problem_set_edit' problem_set.pk %}">
+                	{# Translators: Datoteke za urejanje #}
+					{% trans "Files for editing" %}
+                </a></li>
               </ul>
             </div>
-	        <button class="btn btn-default btn-for-modal" aria-label="Create" data-url="{% url 'problem_create' problem_set.id %}">
+	        <button class="btn btn-default btn-sm btn-for-modal" aria-label="Create" data-url="{% url 'problem_create' problem_set.id %}">
 	            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 	                 {# Translators: Button for creating new problem. #}
 					 {% trans "Add new problem" %}
 	        </button>
-		    <div class="btn-group" role="group" aria-label="Progress">
-	        <a class="btn btn-default btn-large" href="{% url 'problem_set_progress' problem_set.pk %}" role="button">
+		    <div class="btn-group btn-group-sm" role="group" aria-label="Progress">
+	        <a class="btn btn-default" href="{% url 'problem_set_progress' problem_set.pk %}" role="button">
 	            <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
         	{# Translators: Button for showing the overall progress of students for the problem set. #}
             {% trans "Show progress" %}
  	        </a>
 		    </div>
 	        {% else %}
-		    <div class="btn-group" role="group" aria-label="Download">
-	        <a class="btn btn-primary btn-large" href="{% url 'problem_set_attempts' problem_set.pk %}" role="button">
+		    <div class="btn-group btn-group-sm" role="group" aria-label="Download">
+	        <a class="btn btn-primary" href="{% url 'problem_set_attempts' problem_set.pk %}" role="button">
         	{# Translators: Button for downloading all problem files within a problem set. #}
             {% trans "Download all problem files" %}
  	        </a>
@@ -92,7 +100,7 @@
 			  <span class="pull-right">
 					<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
 	                    {% if show_teacher_forms %}
-	                    <div class="btn-group" role="group" aria-label="Download">
+	                    <div class="btn-group btn-group-sm" role="group" aria-label="Download">
 	                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 	                        {# Translators: Prenesi datoteko #}
 							{% trans "Download file" %}
@@ -110,42 +118,44 @@
 	                      </ul>
 	                    </div>
 	                    {% else %}
-						<div class="btn-group" role="group" aria-label="Download">
+						<div class="btn-group btn-group-sm" role="group" aria-label="Download">
 							<a class="btn btn-default" href="{% url 'problem_attempt_file' problem.id %}" role="button">
 								{# Translators: Button for downloading a single problem file. #}
 								{% trans "Download this problem file" %}
 							</a>
 						</div>
 	                    {% endif %}
-	                    <div class="btn-group" role="group" aria-label="Solutions">
-			    				<a class="btn btn-default" href="{% url 'problem_solution' problem.id %}" role="button">
+	                    <div class="btn-group btn-group-sm" role="group" aria-label="Solutions">
+			    				<a class="btn btn-default" href="{% url 'problem_solution' problem.id user.id%}" role="button">
 			    				    {# Translators: Link to page with solutions. #}
 									{% trans "Solutions" %}
 			    				</a>
 		                </div>						
 	                    {% if show_teacher_forms %}
-	                    <div class="btn-group" role="group" aria-label="Move">
-	                        <a class="btn btn-default" href="{% url 'problem_move' problem.id -1 %}" role="button" aria-label="Move Up">
+	                    <div class="btn-group btn-group-sm" role="group" aria-label="Move">
+	                        <a class="btn btn-default" href="{% url 'problem_move' problem.id -1 %}" role="button" aria-label="Move Up"
+	                        	data-toggle="tooltip" title="{% trans 'Move up' %}" data-container:'body'>
 	                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
 	                        </a>
-	                        <a class="btn btn-default" href="{% url 'problem_move' problem.id 1 %}" role="button" aria-label="Move Down">
+	                        <a class="btn btn-default" href="{% url 'problem_move' problem.id 1 %}" role="button" aria-label="Move Down"
+	                        	data-toggle="tooltip" title="{% trans 'Move down' %}" data-container:'body'>
 	                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
 	                        </a>
-	                        <button class="btn btn-default btn-for-modal" aria-label="Update" data-url="{% url 'problem_update' problem.id %}">
+	                        <button class="btn btn-default btn-for-modal" aria-label="Update" data-url="{% url 'problem_update' problem.id %}"
+	                        	data-toggle="tooltip" title="{% trans 'Update' %}" data-container:'body'>
 	                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-	                            {# Translators: Update problem text button. #}
-								{% trans "Update" %}
 	                        </button>
-	                        <button class="btn btn-default btn-for-modal" aria-label="Copy" data-url="{% url 'problem_copy' problem.id %}">
-	                        <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-	                        {# Translators: Copy problem text button. #}
-							{% trans "Copy" %}								
-	                        </button>		                    
+	                        <button class="btn btn-default btn-for-modal" aria-label="Copy" data-url="{% url 'problem_copy' problem.id %}"
+	                        	data-toggle="tooltip" title="{% trans 'Copy' %}" data-container:'body'>
+	                        <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>							
+	                        </button>
+	                        <span data-toggle="tooltip" title="{% trans 'Delete' %}" data-container:'body'>		                    
 	                        <button class="btn btn-default btn-for-modal" aria-label="Delete" data-url="{% url 'problem_delete' problem.id %}">
-	                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-	                            {# Translators: Delete problem text button. #}
-								{% trans "Delete" %}
+	                        	
+	                            	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                            	
 	                        </button>
+	                        </span>
 	                    </div>
 	                    {% endif %}
   				  </div> 
