--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -22,11 +22,11 @@
 	            	<span class="pull-right">
 		            	<form action="{% url 'unenroll_from_course' course.pk %}"  method="post" id='unenroll_from_course_form'>
 			            	{% csrf_token %}
-				            <button class="btn btn-default" type="submit" aria-label="Unenroll">
+				            <button class="btn btn-default btn-sm" type="submit" aria-label="Unenroll">
 								{% trans "Unenroll" %}
 							</button>
 							{% if show_teacher_forms %}
-							<a class="btn btn-primary" href="{% url 'course_users' course.pk %}" role="button">
+							<a class="btn btn-primary btn-sm" href="{% url 'course_users' course.pk %}" role="button">
 		            			{# Translators: Link to list of course users. #}
 			            		{% trans "Browse list of users" %}	
 		            		</a>
@@ -40,7 +40,7 @@
         {% if show_teacher_forms %}
         <div class="panel-body">
 			<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
-			        <button class="btn btn-default btn-for-modal" data-url="{% url 'problem_set_create' course.pk %}" aria-label="Create">
+			        <button class="btn btn-default btn-sm btn-for-modal" data-url="{% url 'problem_set_create' course.pk %}" aria-label="Create">
 			            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			                 {# Translators: Button for creating new problem set. #}
 							 {% trans "Add new problem set" %}
