--- a/web/templates/courses/course_progress.html
+++ b/web/templates/courses/course_progress.html
@@ -34,7 +34,7 @@
         <div class="progress">
           {% for attempt in problem_attempts %}
           	{# FIX IT! IT SHOWS SOLUTION FROM USER THAT IS BROWSING THE PAGE. NEW SOLUTIONS VIEW NEEDED #}
-          	<a href="{% url 'problem_solution' problem.pk %}">
+          	<a href="{% url 'problem_solution' problem.pk observed_user.pk%}">
 	            <div style="width: {{ progress_bar_width }}; {% if not attempt %} background-color: #f5f5f5{% endif %}" class="progress-bar
 	              {% cycle '' 'progress-bar-striped' %}
 	              {% if attempt %}
