Capitalize navigation entry

--- a/web/templates/problems/solutions.html
+++ b/web/templates/problems/solutions.html
@@ -9,7 +9,7 @@
     <li><a href="{{ problem.get_absolute_url }}">{{ problem.title }}</a></li>
     <li><a href="">{{ student.get_full_name }}</a></li>
     <li class="active"><a href="#">
-    	{% trans "solutions" %}	
+    	{% trans "Solutions" %}	
     	<span class="sr-only">
     		{# Translators: current page in navigation #}
     		{% trans "(current)" %}
