--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -3,60 +3,74 @@
 {% load staticfiles %}
 {% block title %}Tomo – {{ course.title }}{% endblock %}
 
-{% block navigation-left %} 
-    <li class="active"><a href="{% url 'course_detail' course.pk %}">{{ course.title }} 
+{% block navigation-left %}
+    <a class="navbar-brand topnav" href="{% url 'course_detail' course.pk %}">{{ course.title }}</a>
     <span class="sr-only">{# Translators: current page in navigation #}
     		{% trans "(current)" %}</span></a></li>
 {% endblock %}
 
 {% block content %}
-<div class="panel panel-default">
-        <div class="panel-heading">
-        	<div class="row">
-			    <div class="col-md-6">
-		            <h4>
-		                {{ course.title }}
-		            </h4>
-	            </div>
-	            <div class="col-md-6">
-	            	<span class="pull-right">
-		            	<form action="{% url 'unenroll_from_course' course.pk %}"  method="post" id='unenroll_from_course_form'>
-			            	{% csrf_token %}
-				            <button class="btn btn-default btn-sm" type="submit" aria-label="Unenroll">
-								{% trans "Unenroll" %}
-							</button>
-							{% if show_teacher_forms %}
-							<a class="btn btn-primary btn-sm" href="{% url 'course_users' course.pk %}" role="button">
-		            			{# Translators: Link to list of course users. #}
-			            		{% trans "Browse list of users" %}	
-		            		</a>
-		            		{% endif %}
-						</form>
-	            	</span>
-	            </div>
-	         </div>
-        </div>
-        
-        {% if show_teacher_forms %}
-        <div class="panel-body">
-			<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
-			        <button class="btn btn-default btn-sm btn-for-modal" data-url="{% url 'problem_set_create' course.pk %}" aria-label="Create">
-			            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-			                 {# Translators: Button for creating new problem set. #}
-							 {% trans "Add new problem set" %}
-			        </button>
-			</div>
-		</div>
-		{% endif %}
-        
-        <ul class="list-group">
+  <div class="content-section-a tomo-top-section">
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+            <div class="tomo-un-enroll">
+              <span class="pull-left">
+                <form action="{% url 'unenroll_from_course' course.pk %}"  method="post" id='unenroll_from_course_form'>
+                  {% csrf_token %}
+                  <button class="btn btn-default btn-sm tomo-unenroll" type="submit" aria-label="{% trans 'Unenroll' %}" data-toggle="tooltip" title="{% trans 'Unenroll' %}"><i class="fa fa-star fa-lg"></i><i class="fa fa-star-o fa-lg"></i></button>
+                  {% if show_teacher_forms %}
+                    <a class="btn btn-primary btn-sm" href="{% url 'course_users' course.pk %}" role="button">
+                    {# Translators: Link to list of course users. #}
+                    {% trans "Browse list of users" %}  
+                    </a>
+                {% endif %}
+                </form>
+              </span>
+              <h2 class="section-heading">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                {{ course.title }}
+              </h2>
+            </div>
+          </div></div>
+
+          <div class="row"><div class="col-md-8">
+
+      <ul class="list-group tomo-courses">
           {% for problem_set in course.annotated_problem_sets %}
-          	{% include 'courses/_problem_set.html' %}
-          {% endfor %}
-        </ul>
+              <li class="list-group-item">
+                <hr class="indicator background{{problem_set.grade}}" width="{{ problem_set.percentage }}%">
+                <div class="media">
+                  <div class="media-left"><p class="success text-danger color{{problem_set.grade}}">{{ problem_set.percentage }}<small>%</small></p></div>
+                  <div class="media-body media-middle">
+                    <div class="row">
+                        <h4 class="media-heading"><a style="" href="{% url 'problem_set_detail' problem_set.pk %}">{{problem_set.title}}</a></h4>
+                    </div>
+                  </div>
+                </div>
+              </li>
+        {% endfor %}
+      </ul>
+  </div>
+
+  <div class="col-md-4 tomo-course-info">
+    <hr>
+    {% for lecturer in course.teachers.all %}
+        <p class="tomo-lecturer">{{ lecturer.get_full_name }}</p>
+    {% endfor %}
+    <p class="tomo-institution">{{ course.organization_title }}</p>
+    <div class="tomo-course-description">
+        {{ course.description }}
     </div>
-		
+  </div>
+</div></div>
+<!-- /.container -->
+</div>
+<!-- /.content-section-a -->
 {% endblock content %}
+
 
 {% block extra_js %}
 <!-- for Tree view and modals-->
