--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -72,17 +72,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <!--
+                    
                     <ul class="list-inline">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#services">{% trans "General terms" %}</a></li>
                         <li class="footer-menu-divider">&sdot;</li>
-                        <li><a href="#about">About</a></li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li><a href="#services">Services</a></li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="mailto:info@projekt-tomo.si">{% trans "Contact" %}</a></li>
                     </ul>
-                    -->
+                    
                     <p class="copyright text-muted small">{% trans "Copyright &copy; Faculty of Mathematics and Physics, University of Ljubljana, 2015. All Rights Reserved "%}</p>
                 </div>
             </div>
